--- a/index.html
+++ b/index.html
@@ -9,55 +9,48 @@
     --bg:#f5f7fb; --card:#fff; --text:#1e293b; --muted:#6b7280;
     --accent:#e9413a; --accent-dark:#d7342d;
     --ok:#16a34a; --ok-btn:#16a34a; --ok-btn-shadow:rgba(22,163,74,.35);
-    --border:#e5e7eb; --ring:#fde2e2;
-    --shadow:0 10px 22px rgba(15,23,42,.08);
+    --border:#e5e7eb; --shadow:0 10px 22px rgba(15,23,42,.08);
     --shadow-sm:0 6px 14px rgba(15,23,42,.06);
-    --radius:18px;
   }
   *{box-sizing:border-box}
   body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:0;background:var(--bg);color:var(--text)}
   .container{max-width:980px;margin:0 auto;padding:20px 14px}
   h1{display:flex;gap:10px;align-items:center;font-size:28px;margin:0 0 12px}
   h1::before{content:"📸";}
-
   .panel{background:var(--card);border-radius:22px;box-shadow:var(--shadow);padding:18px;margin:14px 0}
   .filters{display:grid;grid-template-columns:1fr 1fr;gap:14px}
   label{font-size:15px;color:var(--muted);display:block;margin-bottom:6px}
   select{width:100%;height:52px;border:1px solid var(--border);border-radius:16px;padding:10px 14px;font-size:16px;background:#fff}
-
-  .big-btn{margin-top:14px;width:100%;height:56px;border:0;border-radius:16px;
-    background:var(--accent);color:#fff;font-weight:700;font-size:18px;cursor:pointer;
-    box-shadow:0 10px 20px rgba(233,65,58,.25)}
+  .big-btn{margin-top:14px;width:100%;height:56px;border:0;border-radius:16px;background:var(--accent);color:#fff;font-weight:700;font-size:18px;cursor:pointer;box-shadow:0 10px 20px rgba(233,65,58,.25)}
   .big-btn:active{transform:translateY(1px);background:var(--accent-dark)}
 
-  /* карточки врачей */
-  .doctor{background:var(--card);border-radius:22px;box-shadow:var(--shadow-sm);padding:16px 18px;margin:14px 0}
-  .doc-top{display:flex;align-items:center;gap:10px}
-  .doc-name{font-weight:800;font-size:18px;flex:1}
-  .success{display:flex;align-items:center;gap:12px;color:var(--ok);font-weight:700}
+  /* карточка врача */
+  .doctor{background:var(--card);border-radius:22px;box-shadow:var(--shadow-sm);padding:14px 16px;margin:14px 0}
+  .doc-top{display:flex;gap:12px;align-items:center}
+  .doc-name{font-weight:800;font-size:18px;flex:1;min-width:180px}
+
+  .success{display:flex;align-items:center;gap:12px;color:var(--ok);font-weight:700;white-space:nowrap}
   .success a.btn-ok{
     display:inline-flex;align-items:center;justify-content:center;padding:10px 16px;border-radius:14px;
-    background:var(--ok-btn);color:#fff;text-decoration:none;font-weight:700;box-shadow:0 8px 16px var(--ok-btn-shadow)}
-  .success a.btn-ok:active{transform:translateY(1px)}
+    background:var(--ok-btn);color:#fff;text-decoration:none;font-weight:700;box-shadow:0 8px 16px var(--ok-btn-shadow)
+  }
 
-  .controls{margin-top:12px;display:flex;gap:14px;align-items:center}
-  .file-wrap{
-    flex:1;min-height:48px;border-radius:16px;border:2px dashed var(--border);
-    background:#fafafa;color:var(--muted);display:flex;align-items:center;justify-content:center;
-    padding:10px 12px;text-align:center}
-  .file-name{margin-left:8px;color:#b91c1c;font-weight:600;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-
+  .controls-inline{display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end;white-space:nowrap}
+  .file-name{max-width:300px;color:#b91c1c;font-weight:600;overflow:hidden;text-overflow:ellipsis}
   .btn-upload{
-    min-width:140px;height:48px;border:0;border-radius:14px;background:var(--accent);color:#fff;
-    font-weight:800;cursor:pointer;box-shadow:0 8px 16px rgba(233,65,58,.25)}
+    height:44px; padding:0 16px; border:0; border-radius:14px; background:var(--accent); color:#fff;
+    font-weight:800; cursor:pointer; box-shadow:0 8px 16px rgba(233,65,58,.25)
+  }
+  .btn-gray{
+    height:44px; padding:0 16px; border:2px dashed var(--border); border-radius:14px; background:#fafafa; color:var(--muted); font-weight:700; cursor:pointer;
+  }
   .btn-upload:active{transform:translateY(1px);background:var(--accent-dark)}
-  .hint{color:var(--muted);font-size:14px;margin-top:6px}
 
   @media (max-width:720px){
     .filters{grid-template-columns:1fr}
-    .doc-name{font-size:16px}
-    .controls{gap:10px}
-    .btn-upload{min-width:120px}
+    .doc-top{flex-direction:column; align-items:flex-start}
+    .controls-inline{justify-content:flex-start}
+    .file-name{max-width:100%}
   }
 </style>
 </head>
@@ -67,14 +60,8 @@
 
     <div class="panel">
       <div class="filters">
-        <div>
-          <label>Сотрудник</label>
-          <select id="nameSel"></select>
-        </div>
-        <div>
-          <label>Месяц</label>
-          <select id="monthSel"></select>
-        </div>
+        <div><label>Сотрудник</label><select id="nameSel"></select></div>
+        <div><label>Месяц</label><select id="monthSel"></select></div>
       </div>
       <button class="big-btn" id="showBtn" disabled>Показать список</button>
     </div>
@@ -90,50 +77,42 @@ const monthSel = document.getElementById('monthSel');
 const showBtn  = document.getElementById('showBtn');
 const listDiv  = document.getElementById('list');
 
-async function loadMeta() {
-  nameSel.innerHTML  = '<option value="" selected disabled>Загрузка...</option>';
-  monthSel.innerHTML = '<option value="" selected disabled>Загрузка...</option>';
-  try {
-    const res = await fetch(`${WEB_APP_URL}?fn=meta`);
-    const {names, months} = await res.json();
-    fillSelect(nameSel, names);
-    fillSelect(monthSel, months);
+async function loadMeta(){
+  nameSel.innerHTML = monthSel.innerHTML = '<option selected disabled>Загрузка...</option>';
+  try{
+    const r = await fetch(`${WEB_APP_URL}?fn=meta`);
+    const {names, months} = await r.json();
+    fillSelect(nameSel, names); fillSelect(monthSel, months);
     toggleShowBtn();
-  } catch {
-    nameSel.innerHTML = '<option>Ошибка загрузки</option>';
-    monthSel.innerHTML = '<option>Ошибка загрузки</option>';
+  }catch{
+    nameSel.innerHTML = monthSel.innerHTML = '<option>Ошибка</option>';
   }
 }
 function fillSelect(sel, arr){
-  sel.innerHTML = '<option value="" disabled selected>— выберите —</option>' +
-    arr.map(v => `<option value="${escapeHtml(v)}">${escapeHtml(v)}</option>`).join('');
+  sel.innerHTML = '<option disabled selected>— выберите —</option>' +
+    arr.map(v=>`<option value="${escapeHtml(v)}">${escapeHtml(v)}</option>`).join('');
 }
-[nameSel, monthSel].forEach(el => el.addEventListener('change', toggleShowBtn));
+[nameSel,monthSel].forEach(el=>el.addEventListener('change', toggleShowBtn));
 function toggleShowBtn(){ showBtn.disabled = !(nameSel.value && monthSel.value); }
 
-showBtn.addEventListener('click', async () => {
+showBtn.addEventListener('click', async ()=>{
   listDiv.innerHTML = 'Поиск данных...';
   try{
     const url = `${WEB_APP_URL}?fn=doctors&name=${encodeURIComponent(nameSel.value)}&month=${encodeURIComponent(monthSel.value)}`;
     const rows = await (await fetch(url)).json();
     renderRows(rows);
-  }catch(e){
-    listDiv.textContent = 'Ошибка загрузки: ' + e.message;
-  }
+  }catch(e){ listDiv.textContent = 'Ошибка: ' + e.message; }
 });
 
 function renderRows(rows){
-  if (!rows.length){
-    listDiv.innerHTML = '<div class="hint">Нет записей для выбранных фильтров</div>';
-    return;
-  }
-  listDiv.innerHTML = rows.map(r => {
-    const safeDoctor = escapeHtml(r.doctor);
-    if (r.link){
+  if(!rows.length){ listDiv.innerHTML = '<div>Нет записей</div>'; return; }
+  listDiv.innerHTML = rows.map(r=>{
+    const doc = escapeHtml(r.doctor);
+    if(r.link){
       return `
         <div class="doctor">
           <div class="doc-top">
-            <div class="doc-name">${safeDoctor}</div>
+            <div class="doc-name">${doc}</div>
             <div class="success">Фото загружено — <a class="btn-ok" href="${r.link}" target="_blank" rel="noopener">Открыть</a></div>
           </div>
         </div>`;
@@ -141,36 +120,42 @@ function renderRows(rows){
     return `
       <div class="doctor">
         <div class="doc-top">
-          <div class="doc-name">${safeDoctor}</div>
-        </div>
-        <div class="controls">
-          <label class="file-wrap" onclick="document.getElementById('f_${r.row}').click()">
-            Нажмите для выбора фото
-            <input type="file" accept="image/*" id="f_${r.row}" style="display:none" onchange="showFileName(${r.row})">
+          <div class="doc-name">${doc}</div>
+          <div class="controls-inline">
+            <input type="file" accept="image/*" capture="environment" id="f_${r.row}" style="display:none" onchange="showFileName(${r.row})">
+            <button class="btn-gray" onclick="choose(${r.row})">Выбрать фото</button>
             <span id="fileName_${r.row}" class="file-name" style="display:none"></span>
-          </label>
-          <button class="btn-upload" id="btn_${r.row}" onclick="upload(${r.row}, '${escapeForJs(safeDoctor)}')">Загрузить</button>
+            <button class="btn-upload" id="btn_${r.row}" onclick="upload(${r.row}, '${escapeForJs(doc)}')">Загрузить</button>
+          </div>
         </div>
       </div>`;
   }).join('');
 }
 
-window.showFileName = function(row){
+window.choose = (row)=>document.getElementById('f_'+row).click();
+window.showFileName = (row)=>{
   const input = document.getElementById(`f_${row}`);
   const span  = document.getElementById(`fileName_${row}`);
-  if (input.files && input.files[0]) {
-    span.textContent = 'Выбран: ' + input.files[0].name;
-    span.style.display = 'inline';
-  }
+  if(input.files && input.files[0]){ span.textContent = 'Выбран: ' + input.files[0].name; span.style.display = 'inline'; }
 };
 
+const MAX_MB = 12;
 window.upload = async function(row, doctor){
   const input = document.getElementById(`f_${row}`);
   const btn   = document.getElementById(`btn_${row}`);
-  if (!input.files || !input.files[0]) { alert('Пожалуйста, выберите файл'); return; }
+  if(!input.files || !input.files[0]){ alert('Выберите файл'); return; }
 
   const file = input.files[0];
-  btn.disabled = true; const old = btn.textContent; btn.textContent = 'Загрузка…';
+  if(file.size > MAX_MB*1024*1024){ alert('Слишком большой файл'); return; }
+
+  // Анимация времени «Загрузка… X.Xс»
+  btn.disabled = true;
+  const originalText = btn.textContent;
+  const t0 = Date.now();
+  const timer = setInterval(()=>{
+    const s = ((Date.now()-t0)/1000).toFixed(1);
+    btn.textContent = `Загрузка… ${s}с`;
+  }, 200);
 
   const base64 = await fileToBase64(file);
   const stamp = new Date().toISOString().replace(/[:T]/g,'-').slice(0,19);
@@ -178,34 +163,54 @@ window.upload = async function(row, doctor){
 
   try{
     await fetch(WEB_APP_URL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: {'Content-Type':'application/json'},
+      method:'POST',
+      mode:'no-cors',
+      headers:{'Content-Type':'application/json'},
       body: JSON.stringify({
         action:'upload',
-        payload:{ row, filename:file.name, mimeType:file.type||'image/jpeg', bytes:base64, suggestedName:suggested }
+        payload:{
+          row,
+          filename:file.name,
+          mimeType:file.type || 'image/jpeg',
+          bytes:base64,
+          suggestedName:suggested
+        }
       })
     });
-    setTimeout(refreshDoctors, 1200);
-  } finally {
-    btn.disabled = false; btn.textContent = old;
+    await pollUntilLinked(row, 10000, 1000);
+  }finally{
+    clearInterval(timer);
+    btn.disabled = false;
+    btn.textContent = originalText;
   }
 };
 
-async function refreshDoctors(){
+async function pollUntilLinked(row, timeout=10000, interval=1000){
+  const start = Date.now();
+  while(Date.now() - start < timeout){
+    const rs = await fetchDoctors();
+    const ok = rs.find(x => Number(x.row) === Number(row) && x.link);
+    if(ok){ renderRows(rs); return; }
+    await new Promise(r => setTimeout(r, interval));
+  }
+  renderRows(await fetchDoctors());
+}
+
+async function fetchDoctors(){
   const url = `${WEB_APP_URL}?fn=doctors&name=${encodeURIComponent(nameSel.value)}&month=${encodeURIComponent(monthSel.value)}`;
-  const rows = await (await fetch(url)).json();
-  renderRows(rows);
+  const res = await fetch(url);
+  return res.json();
 }
 
 function fileToBase64(file){
-  return new Promise((resolve, reject) => {
+  return new Promise((resolve, reject)=>{
     const r = new FileReader();
     r.onload = e => resolve(String(e.target.result).split(',')[1]);
     r.onerror = reject;
     r.readAsDataURL(file);
   });
 }
+
 function escapeHtml(s){ return String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
 function escapeForJs(s){ return s.replace(/\\/g,'\\\\').replace(/"/g,'\\"').replace(/'/g,"\\'"); }
 
