--- a/index.html
+++ b/index.html
@@ -24,16 +24,11 @@
   .big-btn{margin-top:14px;width:100%;height:56px;border:0;border-radius:16px;background:var(--accent);color:#fff;font-weight:700;font-size:18px;cursor:pointer;box-shadow:0 10px 20px rgba(233,65,58,.25)}
   .big-btn:active{transform:translateY(1px);background:var(--accent-dark)}
 
-  /* карточка врача */
   .doctor{background:var(--card);border-radius:22px;box-shadow:var(--shadow-sm);padding:14px 16px;margin:14px 0}
   .doc-top{display:flex;gap:12px;align-items:center}
   .doc-name{font-weight:800;font-size:18px;flex:1;min-width:180px}
 
   .success{display:flex;align-items:center;gap:12px;color:var(--ok);font-weight:700;white-space:nowrap}
-  .success a.btn-ok{
-    display:inline-flex;align-items:center;justify-content:center;padding:10px 16px;border-radius:14px;
-    background:var(--ok-btn);color:#fff;text-decoration:none;font-weight:700;box-shadow:0 8px 16px var(--ok-btn-shadow)
-  }
 
   .controls-inline{display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end;white-space:nowrap}
   .file-name{max-width:300px;color:#b91c1c;font-weight:600;overflow:hidden;text-overflow:ellipsis}
@@ -42,9 +37,13 @@
     font-weight:800; cursor:pointer; box-shadow:0 8px 16px rgba(233,65,58,.25)
   }
   .btn-gray{
-    height:44px; padding:0 16px; border:2px dashed var(--border); border-radius:14px; background:#fafafa; color:var(--muted); font-weight:700; cursor:pointer;
+    height:44px; padding:0 16px; border:2px dashed var(--border); border-radius:14px; background:#fafafa; color:#6b7280; font-weight:700; cursor:pointer;
+  }
+  .btn-danger{
+    height:40px; padding:0 14px; border:0; border-radius:12px; background:#fee2e2; color:#b91c1c; font-weight:800; cursor:pointer;
   }
   .btn-upload:active{transform:translateY(1px);background:var(--accent-dark)}
+  .btn-danger:disabled{opacity:.6;cursor:not-allowed}
 
   @media (max-width:720px){
     .filters{grid-template-columns:1fr}
@@ -52,11 +51,14 @@
     .controls-inline{justify-content:flex-start}
     .file-name{max-width:100%}
   }
+
+  /* крошечная кнопка сброса сохранённого выбора */
+  .reset-link{margin-top:8px;font-size:13px;color:#6b7280;cursor:pointer;text-decoration:underline}
 </style>
 </head>
 <body>
   <div class="container">
-    <h1>Загрузка фото</h1>
+    <h1>Отчет УВК</h1>
 
     <div class="panel">
       <div class="filters">
@@ -64,38 +66,60 @@
         <div><label>Месяц</label><select id="monthSel"></select></div>
       </div>
       <button class="big-btn" id="showBtn" disabled>Показать список</button>
+      <div class="reset-link" id="resetChoice" style="display:none">Сбросить сохранённый выбор</div>
     </div>
 
     <div class="panel" id="list">Выберите фильтры и нажмите «Показать список»</div>
   </div>
 
 <script>
-const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzIX1AzaHXqUA5weBfDAaJd9RSsxj6cuvWI1NAUcpDxHlm8es8EOPbtLPbvNhwdXTGu/exec';
+const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzkZl9EYJSIndXxUeK5P6IzIMpmre8nkwUtyl3L3KQNusJk9hGM-ij7kvU0j1Crr_BX/exec';
+
+// ключи для localStorage
+const LS_KEYS = {
+  name:  'lf_name',
+  month: 'lf_month'
+};
 
 const nameSel = document.getElementById('nameSel');
 const monthSel = document.getElementById('monthSel');
 const showBtn  = document.getElementById('showBtn');
 const listDiv  = document.getElementById('list');
+const resetLink = document.getElementById('resetChoice');
 
 async function loadMeta(){
   nameSel.innerHTML = monthSel.innerHTML = '<option selected disabled>Загрузка...</option>';
   try{
     const r = await fetch(`${WEB_APP_URL}?fn=meta`);
     const {names, months} = await r.json();
-    fillSelect(nameSel, names); fillSelect(monthSel, months);
+    fillSelect(nameSel, names);
+    fillSelect(monthSel, months);
+
+    // восстановим сохранённый выбор, если он ещё существует в списках
+    restoreSavedChoice(names, months);
+
     toggleShowBtn();
   }catch{
     nameSel.innerHTML = monthSel.innerHTML = '<option>Ошибка</option>';
   }
 }
+
 function fillSelect(sel, arr){
   sel.innerHTML = '<option disabled selected>— выберите —</option>' +
     arr.map(v=>`<option value="${escapeHtml(v)}">${escapeHtml(v)}</option>`).join('');
 }
-[nameSel,monthSel].forEach(el=>el.addEventListener('change', toggleShowBtn));
+
+[nameSel,monthSel].forEach(el=>el.addEventListener('change', ()=>{
+  toggleShowBtn();
+  saveChoice();                // сохраняем при каждом изменении
+}));
+
 function toggleShowBtn(){ showBtn.disabled = !(nameSel.value && monthSel.value); }
 
 showBtn.addEventListener('click', async ()=>{
+  // на всякий случай ещё раз сохраним
+  saveChoice();
+
   listDiv.innerHTML = 'Поиск данных...';
   try{
     const url = `${WEB_APP_URL}?fn=doctors&name=${encodeURIComponent(nameSel.value)}&month=${encodeURIComponent(monthSel.value)}`;
@@ -104,6 +128,47 @@ showBtn.addEventListener('click', async ()=>{
   }catch(e){ listDiv.textContent = 'Ошибка: ' + e.message; }
 });
 
+// ======== сохранение выбора на устройстве ========
+function saveChoice(){
+  try{
+    if (nameSel.value)  localStorage.setItem(LS_KEYS.name,  nameSel.value);
+    if (monthSel.value) localStorage.setItem(LS_KEYS.month, monthSel.value);
+    resetLink.style.display = (nameSel.value || monthSel.value) ? 'block' : 'none';
+  }catch(_e){}
+}
+
+function restoreSavedChoice(names, months){
+  try{
+    const savedName  = localStorage.getItem(LS_KEYS.name);
+    const savedMonth = localStorage.getItem(LS_KEYS.month);
+
+    // применяем только если значения всё ещё существуют в списках
+    if (savedName && names.includes(savedName)) {
+      nameSel.value = savedName;
+    }
+    if (savedMonth && months.includes(savedMonth)) {
+      monthSel.value = savedMonth;
+    }
+
+    // если хотя бы одно восстановили — покажем ссылку "сбросить"
+    resetLink.style.display = (nameSel.value || monthSel.value) ? 'block' : 'none';
+  }catch(_e){}
+}
+
+// ручной сброс сохранённых значений
+resetLink.addEventListener('click', ()=>{
+  try{
+    localStorage.removeItem(LS_KEYS.name);
+    localStorage.removeItem(LS_KEYS.month);
+  }catch(_e){}
+  nameSel.selectedIndex = 0;
+  monthSel.selectedIndex = 0;
+  toggleShowBtn();
+  resetLink.style.display = 'none';
+  listDiv.innerHTML = 'Выберите фильтры и нажмите «Показать список»';
+});
+
+// ======== остальной код без изменений по логике ========
 function renderRows(rows){
   if(!rows.length){ listDiv.innerHTML = '<div>Нет записей</div>'; return; }
   listDiv.innerHTML = rows.map(r=>{
@@ -113,7 +178,10 @@ function renderRows(rows){
         <div class="doctor">
           <div class="doc-top">
             <div class="doc-name">${doc}</div>
-            <div class="success">Фото загружено — <a class="btn-ok" href="${r.link}" target="_blank" rel="noopener">Открыть</a></div>
+            <div class="controls-inline">
+              <span class="success">Фото загружено</span>
+              <button class="btn-danger" onclick="delPhoto(${r.row}, '${escapeForJs(doc)}')">Удалить фото</button>
+            </div>
           </div>
         </div>`;
     }
@@ -122,7 +190,8 @@ function renderRows(rows){
         <div class="doc-top">
           <div class="doc-name">${doc}</div>
           <div class="controls-inline">
-            <input type="file" accept="image/*" capture="environment" id="f_${r.row}" style="display:none" onchange="showFileName(${r.row})">
+            <!-- без capture: будет выбор камера/галерея -->
+            <input type="file" accept="image/*" id="f_${r.row}" style="display:none" onchange="showFileName(${r.row})">
             <button class="btn-gray" onclick="choose(${r.row})">Выбрать фото</button>
             <span id="fileName_${r.row}" class="file-name" style="display:none"></span>
             <button class="btn-upload" id="btn_${r.row}" onclick="upload(${r.row}, '${escapeForJs(doc)}')">Загрузить</button>
@@ -135,7 +204,7 @@ function renderRows(rows){
 window.choose = (row)=>document.getElementById('f_'+row).click();
 window.showFileName = (row)=>{
   const input = document.getElementById(`f_${row}`);
-  const span  = document.getElementById(`fileName_${row}`);
+  const span  = document.getElementById(`fileName_${r.row}`);
   if(input.files && input.files[0]){ span.textContent = 'Выбран: ' + input.files[0].name; span.style.display = 'inline'; }
 };
 
@@ -148,7 +217,6 @@ window.upload = async function(row, doctor){
   const file = input.files[0];
   if(file.size > MAX_MB*1024*1024){ alert('Слишком большой файл'); return; }
 
-  // Анимация времени «Загрузка… X.Xс»
   btn.disabled = true;
   const originalText = btn.textContent;
   const t0 = Date.now();
@@ -185,12 +253,43 @@ window.upload = async function(row, doctor){
   }
 };
 
+window.delPhoto = async function(row){
+  if(!confirm('Удалить загруженное фото?')) return;
+  try{
+    await fetch(WEB_APP_URL, {
+      method:'POST',
+      mode:'no-cors',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({
+        action:'delete',
+        payload:{ row }
+      })
+    });
+    await pollUntilUnlinked(row, 10000, 1000);
+  }catch(e){
+    alert('Ошибка удаления: ' + e.message);
+  }finally{
+    renderRows(await fetchDoctors());
+  }
+};
+
 async function pollUntilLinked(row, timeout=10000, interval=1000){
   const start = Date.now();
   while(Date.now() - start < timeout){
     const rs = await fetchDoctors();
     const ok = rs.find(x => Number(x.row) === Number(row) && x.link);
     if(ok){ renderRows(rs); return; }
+    await new Promise(r => setTimeout(r, interval));
+  }
+  renderRows(await fetchDoctors());
+}
+
+async function pollUntilUnlinked(row, timeout=10000, interval=1000){
+  const start = Date.now();
+  while(Date.now() - start < timeout){
+    const rs = await fetchDoctors();
+    const gone = rs.find(x => Number(x.row) === Number(row) && !x.link);
+    if(gone){ renderRows(rs); return; }
     await new Promise(r => setTimeout(r, interval));
   }
   renderRows(await fetchDoctors());
